[package]
name = "floodfill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tiff = { git = "https://github.com/Masterchef365/image-tiff", branch = "more_channels" }
anyhow = "1"
